--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "serve": "webpack serve --mode production --open ",
-    "dev": "webpack --mode development",
-    "prod": "webpack --mode production",
-
-    "dev2": "cross-env NODE_ENV=development webpack serve --mode=development",
+    "dev2": "cross-env NODE_ENV=development webpack serve --open --mode=development",
     "prod2": "cross-env NODE_ENV=production webpack --mode=production"
   },
   "author": "",
